:recycle: refactor: removes comments and updates templates

--- a/cars_uwsgi.ini
+++ b/cars_uwsgi.ini
@@ -1,10 +1,16 @@
 [uwsgi]
 
-chdir           = /var/www/cars
+#Define o diretório de trabalho atual para o uWSGI. Isso é importante porque o uWSGI precisa saber onde está o código da sua aplicação e as configurações necessárias.
+chdir           = /var/www/cars 
+#Especifica o módulo WSGI a ser carregado. No caso, app.wsgi indica que o uWSGI deve procurar um arquivo chamado wsgi.py dentro do pacote app. Esse arquivo geralmente contém a instância WSGI da sua aplicação Django
 module          = app.wsgi
+env             = GOOGLE_API_KEY=AIzaSyAj-O2xBdQbXCxqZV-g6b2BiyhGe-0Loik
+#Define o caminho para o ambiente virtual Python que deve ser usado pelo uWSGI.
 home            = /var/www/cars/venv
 master          = true
+#Define o número de processos de trabalho que o uWSGI deve criar. Cada processo pode lidar com uma solicitação simultaneamente, o que melhora a capacidade de resposta e a capacidade de lidar com múltiplas solicitações simultaneamente.
 processes       = 10
+#Define o caminho para o socket Unix que o uWSGI usará para se comunicar com o servidor web (Nginx). 
 socket          = /var/www/cars/cars.sock
 chmod-socket    = 666
 vacuum          = true
